@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST techne-0.2.1.tar.gz 16284678 SHA256 c96f93690d15229824dc74c9d26612689894e2233f3ecfee9765ffb0f0f48b9c
 DIST techne-0.2.3.tar.gz 11996192 SHA256 ec946733d16bf8cce26f8d3c8fc346061965c9e4004eb3613eaf66c8d6d147f7 SHA512 50e9fe48aa51fc39f739674011e9e992ab3376bf1ada83304603c45006e12e389fa2c20ee85a965de0fbe78b75ec8500143b40ef675bafe77f3fee834d93dd3e WHIRLPOOL 88e94fd3be3b80680ec724db1970f4ef897f58b7093f39f6987fc492f3048ee4871e257d40e1409dc4a00498d8b6a1fd1a64c5f54c8f25010bdc3af5ea51b3f6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlAHm6oACgkQknrdDGLu8JDQZwEAk0zO+GMru/p2sTrbRetO/TNP
-IDwIphk4ssQ82WT5t58A/3dMQ5tFsPi0QTTub4cl0yeTEZ4CHPpNaW/D/mtrodum
-=Qe3M
+iF4EAREIAAYFAlAJIEAACgkQknrdDGLu8JAAJgD+Pjf2xqGC78AQGEVIE6vuNfCX
+eoRrjloNXAMXTWJi5McA/21wqmUsIty0LLb4phQsDJNua4IhEIytTRx5WDliKems
+=K2jJ
 -----END PGP SIGNATURE-----
