@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jul 2012; Michael Weber <xmw@gentoo.org> -techne-0.2.1.ebuild,
+  techne-0.2.3.ebuild:
+  dev-games/techne: Fix deps, drop old
+
 *techne-0.2.3 (19 Jul 2012)
 
   19 Jul 2012; Michael Weber <xmw@gentoo.org> +techne-0.2.3.ebuild,
